partie-3-opa-gatekeeper/test-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-latest-pod
spec:
  containers:
    - name: test-container
      image: busybox:latest
      command: ["sleep", "3600"]
