partie-3-opa-gatekeeper/require-non-root-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequireusernonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequireUserNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireusernonroot

        violation[{"msg": msg}] {
          input.review.object.kind == "Pod"
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container %v must set runAsNonRoot to true", [container.name])
        }
