partie-3-opa-gatekeeper/require-non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireUserNonRoot
metadata:
  name: require-non-root
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
